# hdlproto

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  README.ja.md  README.md  pyproject.toml  setup.py
doc/: getting_started.jp.md  getting_started.md
doc/source/: api.rst  conf.py  getting_started.ja.md  getting_started.md  index.rst
example/: ex_exception.py  ex_module.py  ex_sap1.py
examples/: ex_array_port.py  ex_interface.py  ex_interface_array.py  ex_module.py  ex_output_reg.py  ex_sap1.py
hdlproto/: __init__.py  environment_builder.py  error.py  factories.py  function_manager.py  interface.py  module.py  region.py  signal.py  signal_array.py  simconfig.py  simulation_context.py  simulator.py  state.py  testbench.py  testcase_manager.py  vcdwriter.py
hdlproto/event/: __init__.py  event.py  event_manager.py  event_mediator.py
hdlproto/module/: __init__.py  module.py  module_list.py  module_manager.py
hdlproto/signal/: __init__.py  signal.py  signal_list.py  signal_manager.py
tests/: test_advanced_modules.py  test_argument_array.py  test_array.py  test_basic_modules.py  test_counter_example.py  test_exception.py  test_input_output.py  test_inputwire.py  test_inputwirearray.py  test_outputreg.py  test_outputregarray.py  test_outputwire.py  test_outputwirearray.py  test_reg.py  test_regarray.py  test_simulation.py  test_wire.py  test_wire_reg.py  test_wirearray.py
